# vpdf

./: .gitmodules  CMakeLists.txt  README.md  calibration.cpp  calibration.h  calibrationdialog.cpp  calibrationdialog.h  calibrationdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  measurerect.cpp  measurerect.h  pdfview.cpp  pdfview.h  resources.qrc  stylechecker-options.json  vpdf_de_DE.ts
.github/actions/prepare-msys/: action.yml
.github/workflows/: build-bionic.yml  build-focal-clang.yml  build-focal-gcc.yml  build-win.yml
build-scripts/: make_release.sh  vpdf.desktop
cmake/: Packaging.cmake  make-appimage.sh.in
